--- a/FTCollectorApp/View/LoginPage.xaml
+++ b/FTCollectorApp/View/LoginPage.xaml
@@ -30,21 +30,21 @@
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <local:BorderColorEntry Margin="0,0,5,0" Grid.Column="0" x:Name="firstnameTxt" Text="{Binding FirstName}" IsEnabled="False"/>
-                <local:BorderColorEntry Margin="5,0,0,0" Grid.Column="1" Text="{Binding LastName}" IsEnabled="False" />
+                <local:BorderColorEntry Margin="0,0,5,0" Grid.Column="0" x:Name="firstnameTxt" Text="{Binding FirstName, Mode=TwoWay}" IsEnabled="False"/>
+                <local:BorderColorEntry Margin="5,0,0,0" Grid.Column="1" Text="{Binding LastName, Mode=TwoWay}" IsEnabled="False" />
             </Grid>
             <Button x:Name="btnLogin" Text="Sign In"  HorizontalOptions="FillAndExpand" 
-            BackgroundColor="{StaticResource blueColor}" TextColor="White" Command="{Binding LoginCommand}">
-                <Button.Triggers>
+            BackgroundColor="{StaticResource blueColor}"                    
+                    TextColor="White" Command="{Binding LoginCommand}">
+                <!--<Button.Triggers>
                     <DataTrigger TargetType="Button"
                     Binding="{Binding Source={x:Reference firstnameTxt},
                                     Path=Text.Length}"
                     Value="0">
                         <Setter Property="IsEnabled" Value="False" />
                         <Setter Property="BackgroundColor" Value="Gray" />
-                        <!-- multiple Setters elements are allowed -->
-                    </DataTrigger>
-                </Button.Triggers>
+                </DataTrigger>
+                </Button.Triggers> -->
 
             </Button>
         </StackLayout>
