--- a/FTCollectorApp/View/TraceFiberPages/DuctTracePage.xaml
+++ b/FTCollectorApp/View/TraceFiberPages/DuctTracePage.xaml
@@ -2,65 +2,109 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:FTCollectorApp.Utils"
              x:Class="FTCollectorApp.View.TraceFiberPages.DuctTracePage">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem  Clicked="btnCamera" IconImageSource="cam_white.png" 
-                 Order="Primary"
-                 Priority="0" />
-    </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <StackLayout Padding="10" VerticalOptions="FillAndExpand">
+        <ScrollView>
+            <StackLayout Padding="10" VerticalOptions="FillAndExpand">
 
-            <Grid RowDefinitions="2*,0.5*,*,0.5*,*,0.5*,*,0.5*,*,0.5*,*,0.5*,*" ColumnDefinitions="*,*">
-                <Label Text="Duct Trace" Grid.Row="0" Grid.ColumnSpan="2" HorizontalOptions="Center" FontSize="Large" />
-                <Label Text="Beginning Tag Number *" Grid.Column="0" Grid.Row="1" />
-                <Label Text="Site type"              Grid.Column="1" Grid.Row="1" />
-                <local:Dropdown2 Grid.Column="0" Grid.Row="2" x:Name="pTagNumber" 
+                <Grid RowDefinitions="2*,0.5*,*,0.5*,*,0.5*,*,0.5*" ColumnDefinitions="*,*">
+                    <Label Text="Duct Trace" Grid.Row="0" Grid.ColumnSpan="2" HorizontalOptions="Center" FontSize="Large" />
+                    <Label Text="Beginning Tag Number *" Grid.Column="0" Grid.Row="1" />
+                    <Label Text="Site type"              Grid.Column="1" Grid.Row="1" />
+                    <local:Dropdown2 Grid.Column="0" Grid.Row="2" x:Name="pTagNumber" 
                                  ItemsSource="{Binding BeginningSiteList}" ItemDisplayBinding="{Binding HosTagNumber}"
-                                 SelectedIndexChanged="OnBeginSiteIndexChanged"
+                                     SelectedItem="{Binding SelectedTagNum}"
                                  />
-                <local:BorderColorEntry Grid.Column="1" Grid.Row="2" x:Name="txtSiteType"  IsEnabled="False"/>
+                    <local:BorderColorEntry Grid.Column="1" Grid.Row="2" x:Name="txtSiteType" 
+                                            Text="{Binding SelectedTagNum.HostType}"  IsEnabled="False"/>
 
-                <Label Text="Site name"  Grid.Row="3" Grid.ColumnSpan="2"/>
-                <local:BorderColorEntry  Grid.Row="4" Grid.ColumnSpan="2" x:Name="txtSiteName" IsEnabled="False"/>
+                    <Label Text="Site name"  Grid.Row="3" Grid.ColumnSpan="2"/>
+                    <local:BorderColorEntry  Grid.Row="4" Grid.ColumnSpan="2" x:Name="txtSiteName" 
+                                Text="{Binding SelectedTagNum.HostType}" IsEnabled="False"/>
 
-                <Label Text="Which Duct? *" Grid.Column="0" Grid.Row="5" />
-                <Label Text="Usage" Grid.Column="1" Grid.Row="5" />
-                <local:Dropdown Grid.Column="0" Grid.Row="6" x:Name="pWDuct" 
+                    <Label Text="Which Duct? *" Grid.Column="0" Grid.Row="5" />
+                    <Label Text="Usage" Grid.Column="1" Grid.Row="5" />
+                    <local:Dropdown Grid.Column="0" Grid.Row="6" 
+                                 ItemsSource="{Binding DuctConduitDatas}" 
                                  ItemDisplayBinding="{Binding WhichDucts}"
-                                SelectedIndexChanged="OnIndexChanged"
+                                 SelectedItem="{Binding SelectedDuct,Mode=TwoWay}"
                                  />
-                <local:BorderColorEntry Grid.Column="1" Grid.Row="6" x:Name="txtUsage" IsEnabled="False"/>
+                    <local:BorderColorEntry Grid.Column="1" Grid.Row="6" Text="{Binding SelectedDuct.DuctUsage}" IsEnabled="False"/>
 
-                <Label Text="Color" Grid.Column="0" Grid.Row="7" />
-                <Label Text="Size" Grid.Column="1" Grid.Row="7" />
-                <local:BorderEntry Grid.Column="0" Grid.Row="8" x:Name="txtColor" IsEnabled="False"/>
-                <local:BorderColorEntry Grid.Column="1" Grid.Row="8" x:Name="txtSize" IsEnabled="False"/>
+                    <Label Text="Color" Grid.Column="0" Grid.Row="7" />
+                    <Label Text="Size" Grid.Column="1" Grid.Row="7" />
+                    <local:BorderEntry Grid.Column="0" Grid.Row="8" Text="{Binding SelectedDuct.DuctColor}" IsEnabled="False"/>
+                    <local:BorderColorEntry Grid.Column="1" Grid.Row="8" Text="{Binding SelectedDuct.DuctSize}" IsEnabled="False"/>
 
-                <Label Text="What Cable ? *" Grid.Column="0" Grid.Row="9" />
-                <Label Text="SM Count" Grid.Column="0" Grid.Row="11" />
-                <Label Text="MM Count" Grid.Column="1" Grid.Row="11" />                
-                <local:Dropdown2 Grid.Column="0" Grid.Row="10" x:Name="pCableId" 
+                </Grid>
+                <Grid RowDefinitions="0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*" ColumnDefinitions="2*,0.5*,*,*">
+                    <Label Text="#1 What Cable ? *"  />
+                    <Label Text="Sheath Out" Grid.Column="2" Grid.ColumnSpan="2" />
+                    <Label Text="SM Cnt" Grid.Row="2" Grid.Column="2"  />
+                    <Label Text="MM Cnt" Grid.Row="2" Grid.Column="3" />
+                    <local:Dropdown2 Grid.Row="1" 
                                  ItemsSource="{Binding aFiberCableList}" ItemDisplayBinding="{Binding CableIdDesc}"
-                                 SelectedIndexChanged="OnIndexChanged"
-                                 />
-                <local:BorderColorEntry Grid.Column="0" Grid.Row="12" x:Name="txtSMCount" IsEnabled="False"/>
-                <local:BorderColorEntry Grid.Column="1" Grid.Row="12" x:Name="txtMMCount" IsEnabled="False"/>
-            </Grid>
-            <Grid RowDefinitions="0.5*,*" ColumnDefinitions="*,*,*">
-                <Label Text="Sheath out" Grid.Column="0" Grid.Row="0" />
-                <Label Text="Unit Measure" Grid.Column="1" Grid.Row="0" />
-                <Label Text="Install Method" Grid.Column="2" Grid.Row="0" />
-                <local:BorderColorEntry Grid.Column="0" Grid.Row="2" x:Name="txtSheatOut" />                
-                <local:Dropdown2 Grid.Column="1" Grid.Row="2" x:Name="pUOM" 
-                                 ItemsSource="{Binding UnitOfMeasures}" ItemDisplayBinding="{Binding UOMUnit}"
-                                 />
-                <local:Dropdown2 Grid.Column="2" Grid.Row="2" x:Name="pInstallMethod" 
-                                 ItemsSource="{Binding DuctInstallList}" ItemDisplayBinding="{Binding DuctInstallDesc}"
-                                 />                
+                                 SelectedItem="{Binding SelectedCable1, Mode=TwoWay}"/>
+                    <Button Grid.Column="1" Grid.Row="1" Text="X" Command="{Binding RemoveCable1Command}"/>
+                    <local:BorderEntry Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Text="{Binding SheathMark1, Mode=TwoWay}"/>                                                          
+                    <local:BorderColorEntry Grid.Row="3" Grid.Column="2" Text="{Binding SelectedCable1.SMCount}" IsEnabled="False"/>
+                    <local:BorderColorEntry Grid.Row="3" Grid.Column="3" Text="{Binding SelectedCable1.MMCount}" IsEnabled="False"/>
 
-            </Grid>
+                    <Label Text="#2 What Cable ? *"  Grid.Row="4" />
+                    <Label Text="Sheath Out" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" />
+                    <Label Text="SM Cnt" Grid.Row="6" Grid.Column="2"  />
+                    <Label Text="MM Cnt" Grid.Row="6" Grid.Column="3" />
+                    <local:Dropdown2 Grid.Row="5" 
+                                 ItemsSource="{Binding aFiberCableList}" ItemDisplayBinding="{Binding CableIdDesc}"
+                                 SelectedItem="{Binding SelectedCable2, Mode=TwoWay}"/>
+                    <Button Grid.Column="1" Grid.Row="5" Text="X" Command="{Binding RemoveCable2Command}"/>
+                    <local:BorderEntry Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Text="{Binding SheathMark2, Mode=TwoWay}"/>
+                    <local:BorderColorEntry Grid.Row="7" Grid.Column="2" Text="{Binding SelectedCable2.SMCount}" IsEnabled="False"/>
+                    <local:BorderColorEntry Grid.Row="7" Grid.Column="3" Text="{Binding SelectedCable2.MMCount}" IsEnabled="False"/>
 
-            <Button Text="Save and Start Tracing" x:Name="btnSaveStart" />
+                    <Label Text="#3 What Cable ? *"  Grid.Row="8" />
+                    <Label Text="Sheath Out" Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="2" />
+                    <Label Text="SM Cnt" Grid.Row="10" Grid.Column="2"  />
+                    <Label Text="MM Cnt" Grid.Row="10" Grid.Column="3" />
+                    <local:Dropdown2 Grid.Row="9" 
+                                 ItemsSource="{Binding aFiberCableList}" ItemDisplayBinding="{Binding CableIdDesc}"
+                                 SelectedItem="{Binding SelectedCable3, Mode=TwoWay}"/>
+                    <Button Grid.Column="1" Grid.Row="9" Text="X" Command="{Binding RemoveCable3Command}"/>
+                    <local:BorderEntry Grid.Row="9" Grid.Column="2" Grid.ColumnSpan="2"  Text="{Binding SheathMark3, Mode=TwoWay}"/>
+                    <local:BorderColorEntry Grid.Row="11" Grid.Column="2" Text="{Binding SelectedCable3.SMCount}" IsEnabled="False"/>
+                    <local:BorderColorEntry Grid.Row="11" Grid.Column="3" Text="{Binding SelectedCable3.MMCount}" IsEnabled="False"/>
+
+                    <Label Text="#4 What Cable ? *"  Grid.Row="12" />
+                    <Label Text="Sheath Out" Grid.Row="12" Grid.Column="2" Grid.ColumnSpan="2" />
+                    <Label Text="SM Cnt" Grid.Row="14" Grid.Column="2"  />
+                    <Label Text="MM Cnt" Grid.Row="14" Grid.Column="3" />
+                    <local:Dropdown2 Grid.Row="13" 
+                                 ItemsSource="{Binding aFiberCableList}" ItemDisplayBinding="{Binding CableIdDesc}"
+                                 SelectedItem="{Binding SelectedCable4, Mode=TwoWay}"/>
+                    <Button Grid.Column="1" Grid.Row="13" Text="X" Command="{Binding RemoveCable4Command}"/>
+                    <local:BorderEntry Grid.Row="13" Grid.Column="2" Grid.ColumnSpan="2"  Text="{Binding SheathMark4, Mode=TwoWay}"/>
+                    <local:BorderColorEntry Grid.Row="15" Grid.Column="2" Text="{Binding SelectedCable4.SMCount}" IsEnabled="False"/>
+                    <local:BorderColorEntry Grid.Row="15" Grid.Column="3" Text="{Binding SelectedCable4.MMCount}" IsEnabled="False"/>
+
+                </Grid>
+
+                <Grid RowDefinitions="0.1*,0.2*" ColumnDefinitions="*,*">
+                    <Label Text="Install Method" />
+                    <Label Text="UoM" Grid.Column="1" />
+                    <local:Dropdown2 Grid.Row="1"
+                                     ItemsSource="{Binding DuctInstallList}" ItemDisplayBinding="{Binding DuctInstallDesc}"
+                                     SelectedItem="{Binding selectedDuctInstall}"
+                                     />
+                    <local:Dropdown2 Grid.Column="1" Grid.Row="1"
+                                     ItemsSource="{Binding UnitOfMeasures}" ItemDisplayBinding="{Binding UOMUnit}"
+                                     SelectedItem="{Binding SelectedUOM}"
+                                     />
+               
+
+                </Grid>
+
+                <Button Text="Save and Start Tracing" Command="{Binding SaveAndContinueCommand}"/>
+
         </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
